[package]
name = "rankfns"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "IR ranking math kernels (no indexing): BM25/TF-IDF/LM transforms."
repository = "https://github.com/arclabs561/rankfns"
homepage = "https://github.com/arclabs561/rankfns"
documentation = "https://github.com/arclabs561/rankfns#readme"
readme = "README.md"
keywords = ["information-retrieval", "bm25", "tfidf", "ranking"]
categories = ["algorithms", "mathematics", "science"]
publish = false

[dependencies]

